made a more informative comparison between MSE and ML

--- a/Copula Packages Notebook.ipynb
+++ b/Copula Packages Notebook.ipynb
@@ -243,6 +243,17 @@
     "collapsed": true
    },
    "outputs": [],
+   "source": [
+    "plt.plot(c, lognorm.pdf(t, sc), lw=5, alpha=0.6, label='y:lognormal')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": []
   }
  ],
