moved widget example into examples. Will instead try bokeh widgets for input

--- a/Examples_of_things_in_python.ipynb
+++ b/Examples_of_things_in_python.ipynb
@@ -426,6 +426,68 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Text field in Jupyter widgets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4d7fe05ef4ad42edb0592af75131ae8d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/html": [
+       "<p>Failed to display Jupyter Widget of type <code>interactive</code>.</p>\n",
+       "<p>\n",
+       "  If you're reading this message in the Jupyter Notebook or JupyterLab Notebook, it may mean\n",
+       "  that the widgets JavaScript is still loading. If this message persists, it\n",
+       "  likely means that the widgets JavaScript library is either not installed or\n",
+       "  not enabled. See the <a href=\"https://ipywidgets.readthedocs.io/en/stable/user_install.html\">Jupyter\n",
+       "  Widgets Documentation</a> for setup instructions.\n",
+       "</p>\n",
+       "<p>\n",
+       "  If you're reading this message in another frontend (for example, a static\n",
+       "  rendering on GitHub or <a href=\"https://nbviewer.jupyter.org/\">NBViewer</a>),\n",
+       "  it may mean that your frontend doesn't currently support widgets.\n",
+       "</p>\n"
+      ],
+      "text/plain": [
+       "interactive(children=(Text(value='your google maps api key here!', description='text'), Output()), _dom_classes=('widget-interact',))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "your api key is: your google maps api key here!\n"
+     ]
+    }
+   ],
+   "source": [
+    "from ipywidgets import widgets, interactive\n",
+    "from IPython.display import display\n",
+    "\n",
+    "def input_listener(text):\n",
+    "    return text\n",
+    "\n",
+    "w=interactive(input_listener, text='your google maps api key here!')\n",
+    "display(w)\n",
+    "\n",
+    "print('your api key is: {}'.format(w.result))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<h1>Some Input Data</h1>"
    ]
   },
@@ -927,7 +989,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
