made naive method for generating booking data with uniformly distributed dates. length of booking can be controlled with a distribution from scipy stats

--- a/Rental Potatoes.ipynb
+++ b/Rental Potatoes.ipynb
@@ -19,8 +19,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from bokeh.io import output_file, show\n",
@@ -28,20 +30,26 @@
     "  GMapPlot, GMapOptions, ColumnDataSource, Circle, Range1d, PanTool, WheelZoomTool, BoxSelectTool\n",
     ")\n",
     "from helpercode import generateData\n",
+    "from scipy import stats as spst \n",
     "api_key='someapikey'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#fetch potato booking data. startdate, enddate, length of booking.\n",
+    "dataDict=generateData(spst.genpareto, 1.,{'loc':1800.,'scale':3.}, 10000)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Starting point is the geodata example from Bokeh: \n",
@@ -74,7 +82,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -96,7 +106,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
