half baked coordinate conversion

--- a/Rental Potatoes.ipynb
+++ b/Rental Potatoes.ipynb
@@ -37,7 +37,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#fetch potato booking data. startdate, enddate, length of booking.\n",
@@ -52,15 +54,26 @@
    },
    "outputs": [],
    "source": [
+    "radius=10. #in km"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "#Starting point is the geodata example from Bokeh: \n",
     "#https://bokeh.pydata.org/en/latest/docs/user_guide/geo.html\n",
-    "map_options = GMapOptions(lat=30.29, lng=-97.73, \n",
+    "map_options = GMapOptions(lat=57.709041, lng=11.974550, \n",
     "                          map_type=\"roadmap\", zoom=11)\n",
     "\n",
     "plot = GMapPlot(x_range=Range1d(), y_range=Range1d(), \n",
     "                map_options=map_options)\n",
     "\n",
-    "plot.title.text = \"Some City in the world\"\n",
+    "plot.title.text = \"GBG radius {} \"\n",
     "\n",
     "plot.api_key = api_key\n",
     "\n",
