added a function that generates locations in degree coordinates given a center coordinate and a radius

--- a/Rental Potatoes.ipynb
+++ b/Rental Potatoes.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -29,21 +29,8 @@
     "from bokeh.models import (\n",
     "  GMapPlot, GMapOptions, ColumnDataSource, Circle, Range1d, PanTool, WheelZoomTool, BoxSelectTool\n",
     ")\n",
-    "from helpercode import generateData\n",
-    "from scipy import stats as spst \n",
-    "api_key='someapikey'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#fetch potato booking data. startdate, enddate, length of booking.\n",
-    "dataDict=generateData(spst.genpareto, 1.,{'loc':1800.,'scale':3.}, 10000)"
+    "from helpercode import generateTimeData, generateLocations\n",
+    "from scipy import stats as spst "
    ]
   },
   {
@@ -54,7 +41,40 @@
    },
    "outputs": [],
    "source": [
-    "radius=10. #in km"
+    "api_key='someapikey'\n",
+    "samples=10000\n",
+    "radius=10 #km\n",
+    "center={'lat':57.7090,'lon':11.9745} #centerpoint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#fetch potato booking data. startdate, enddate, length of booking.\n",
+    "dataTimeDict=generateTimeData(spst.genpareto, 1.,{'loc':1800.,'scale':3.}, samples)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "dataLocationDict=generateLocations(samples,radius,center)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataLocationDict.keys()"
    ]
   },
   {
