attempting to render a point with a potato as a shape. not working.

--- a/Rental Potatoes.ipynb
+++ b/Rental Potatoes.ipynb
@@ -19,13 +19,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "from bokeh.io import output_file, show\n",
+    "from bokeh.io import output_file\n",
+    "from bokeh.plotting import figure, show\n",
+    "from bokeh.models.glyphs import ImageURL\n",
     "from bokeh.models import (\n",
     "  GMapPlot, GMapOptions, ColumnDataSource, Circle, Range1d, PanTool, WheelZoomTool, BoxSelectTool\n",
     ")\n",
@@ -35,14 +35,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "api_key='someapikey'\n",
-    "samples=10000\n",
+    "samples=1000\n",
     "radius=10 #km\n",
     "center={'lat':57.7090,'lon':11.9745} #centerpoint"
    ]
@@ -59,22 +57,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['lon', 'lat'])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "dataLocationDict=generateLocations(samples,radius,center)"
+    "dataLocationDict=generateLocations(samples,radius,center)\n",
+    "#Simple sanity check\n",
+    "dataLocationDict.keys()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "E-1001 (BAD_COLUMN_NAME): Glyph refers to nonexistent column name: https://github.com/lia-statsletters/notebooks/blob/master/img/potato.png [renderer: GlyphRenderer(id='f230df53-854c-4301-ba91-0a67d2d35fb0', ...)]\n"
+     ]
+    }
+   ],
    "source": [
-    "dataLocationDict.keys()"
+    "#plotting using potatoes as markers.\n",
+    "p=figure()\n",
+    "#testing one potato first\n",
+    "p.image_url(url=['https://raw.githubusercontent.com/lia-statsletters/notebooks/master/img/potato.png'], w=center['lat'], h=center['lon'], x=50, y=10)\n",
+    "show(p)\n",
+    "\n"
    ]
   },
   {
@@ -139,7 +161,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
