--- a/Rental Potatoes.ipynb
+++ b/Rental Potatoes.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
     "from bokeh.plotting import figure, show\n",
     "from bokeh.models.glyphs import ImageURL\n",
     "from bokeh.models import (\n",
-    "  GMapPlot, GMapOptions, ColumnDataSource, Circle, Range1d, PanTool, WheelZoomTool, BoxSelectTool\n",
+    "  Plot, Range1d, GMapPlot, GMapOptions, ColumnDataSource, Circle, Range1d, PanTool, WheelZoomTool, BoxSelectTool\n",
     ")\n",
     "from helpercode import generateTimeData, generateLocations\n",
     "from scipy import stats as spst "
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
        "dict_keys(['lon', 'lat'])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,32 +79,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "E-1001 (BAD_COLUMN_NAME): Glyph refers to nonexistent column name: https://github.com/lia-statsletters/notebooks/blob/master/img/potato.png [renderer: GlyphRenderer(id='f230df53-854c-4301-ba91-0a67d2d35fb0', ...)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#plotting using potatoes as markers.\n",
-    "p=figure()\n",
+    "potatoURL='https://raw.githubusercontent.com/lia-statsletters/notebooks/master/img/potato.png'\n",
+    "rr= Range1d(start=-100, end=200)\n",
+    "p=Plot(x_range=rr, y_range=rr)\n",
+    "#datasource of one point to Potatify\n",
+    "toPotatify=ColumnDataSource({'imgurl':[potatoURL],\n",
+    "                             'lat':[center['lat']],\n",
+    "                             'lon':[center['lon']]})\n",
     "#testing one potato first\n",
-    "p.image_url(url=['https://raw.githubusercontent.com/lia-statsletters/notebooks/master/img/potato.png'], w=center['lat'], h=center['lon'], x=50, y=10)\n",
+    "potatoImage=ImageURL(url='imgurl', \n",
+    "                      anchor='center')\n",
+    "\n",
+    "p.add_glyph(toPotatify,potatoImage)\n",
     "show(p)\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Starting point is the geodata example from Bokeh: \n",
@@ -137,9 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
