--- a/Rental Potatoes.ipynb
+++ b/Rental Potatoes.ipynb
@@ -19,27 +19,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from bokeh.io import output_file\n",
     "from bokeh.plotting import figure, show\n",
     "from bokeh.models.glyphs import ImageURL\n",
-    "from bokeh.models import (\n",
-    "  Plot, Range1d, GMapPlot, GMapOptions, ColumnDataSource, Circle, Range1d, PanTool, WheelZoomTool, BoxSelectTool\n",
-    ")\n",
+    "from bokeh.models import GMapPlot, GMapOptions, Circle, PanTool, WheelZoomTool, BoxSelectTool\n",
+    "from bokeh.models import Range1d, ColumnDataSource\n",
     "from helpercode import generateTimeData, generateLocations\n",
     "from scipy import stats as spst "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "api_key='someapikey'\n",
+    "api_key='AIzaSyCkjABbAFlhtI7pQMd4zmZuKYANHBXeIPA'\n",
     "samples=1000\n",
     "radius=10 #km\n",
     "center={'lat':57.7090,'lon':11.9745} #centerpoint"
@@ -48,7 +51,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#fetch potato booking data. startdate, enddate, length of booking.\n",
@@ -57,49 +62,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['lon', 'lat'])"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dataLocationDict=generateLocations(samples,radius,center)\n",
-    "#Simple sanity check\n",
-    "dataLocationDict.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#plotting using potatoes as markers.\n",
-    "potatoURL='https://raw.githubusercontent.com/lia-statsletters/notebooks/master/img/potato.png'\n",
-    "rr= Range1d(start=-100, end=200)\n",
-    "p=Plot(x_range=rr, y_range=rr)\n",
-    "#datasource of one point to Potatify\n",
-    "toPotatify=ColumnDataSource({'imgurl':[potatoURL],\n",
-    "                             'lat':[center['lat']],\n",
-    "                             'lon':[center['lon']]})\n",
-    "#testing one potato first\n",
-    "potatoImage=ImageURL(url='imgurl', \n",
-    "                      anchor='center')\n",
-    "\n",
-    "p.add_glyph(toPotatify,potatoImage)\n",
-    "show(p)\n",
-    "\n",
-    "\n",
-    "\n"
+    "dataLocationDict=generateLocations(samples,radius,center)\n",
+    "#Simple sanity check\n",
+    "print((dataLocationDict['lat'][0],dataLocationDict['lon'][0]))"
    ]
   },
   {
@@ -116,18 +85,15 @@
     "plot = GMapPlot(x_range=Range1d(), y_range=Range1d(), \n",
     "                map_options=map_options)\n",
     "\n",
-    "plot.title.text = \"GBG radius {} \"\n",
+    "plot.title.text = \"GBG radius {} km\".format(radius)\n",
     "\n",
     "plot.api_key = api_key\n",
     "\n",
     "source = ColumnDataSource(\n",
-    "    data=dict(\n",
-    "        lat=[30.29, 30.20, 30.29],\n",
-    "        lon=[-97.70, -97.74, -97.78],\n",
+    "    data=dataLocationDict\n",
     "    )\n",
-    ")\n",
     "\n",
-    "circle = Circle(x=\"lon\", y=\"lat\", size=15, fill_color=\"blue\", fill_alpha=0.8, line_color=None)\n",
+    "circle = Circle(x=\"lon\", y=\"lat\", size=100, fill_color=\"blue\", fill_alpha=0.8, line_color=None)\n",
     "plot.add_glyph(source, circle)\n",
     "\n",
     "plot.add_tools(PanTool(), WheelZoomTool(), BoxSelectTool())\n",
@@ -138,7 +104,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -160,7 +128,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
