--- a/Rental Potatoes.ipynb
+++ b/Rental Potatoes.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -36,13 +36,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "api_key='AIzaSyCkjABbAFlhtI7pQMd4zmZuKYANHBXeIPA'\n",
+    "api_key='LALALALALALALALALALALALALALA'\n",
     "samples=1000\n",
     "radius=10 #km\n",
     "center={'lat':57.7090,'lon':11.9745} #centerpoint"
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -62,9 +62,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(57.723364823585122, 11.980001448021893)\n"
+     ]
+    }
+   ],
    "source": [
     "dataLocationDict=generateLocations(samples,radius,center)\n",
     "#Simple sanity check\n",
@@ -73,8 +81,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Starting point is the geodata example from Bokeh: \n",
