better function for generating locations: make crude assumption of lat=Y and long=x, make a delta point, rotate it, sum it to center, voila

--- a/Rental Potatoes.ipynb
+++ b/Rental Potatoes.ipynb
@@ -42,7 +42,7 @@
    },
    "outputs": [],
    "source": [
-    "api_key='LALALALALALALALALALALALALALA'\n",
+    "api_key='lulz not falling for that one'\n",
     "samples=1000\n",
     "radius=10 #km\n",
     "center={'lat':57.7090,'lon':11.9745} #centerpoint"
@@ -69,7 +69,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(57.723364823585122, 11.980001448021893)\n"
+      "(57.687454634771321, 12.018806600764776)\n"
      ]
     }
    ],
@@ -103,7 +103,7 @@
     "    data=dataLocationDict\n",
     "    )\n",
     "\n",
-    "circle = Circle(x=\"lon\", y=\"lat\", size=100, fill_color=\"blue\", fill_alpha=0.8, line_color=None)\n",
+    "circle = Circle(x=\"lon\", y=\"lat\", size=7, fill_color=\"Coral\", fill_alpha=0.8, line_color=None)\n",
     "plot.add_glyph(source, circle)\n",
     "\n",
     "plot.add_tools(PanTool(), WheelZoomTool(), BoxSelectTool())\n",
