sending a message to a sqs queue, and reminders on how to set them up

--- a/Boto3_tuts.ipynb
+++ b/Boto3_tuts.ipynb
@@ -4,16 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# S3\n",
-    "Let's start with being able to get data in some way. "
+    "# Some Boto3 tutorials\n",
+    "Step 0: get the CLI for AWS, setup credentials. See here: https://boto3.readthedocs.io/en/latest/guide/quickstart.html"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# EC2\n",
-    "And then you neehttp://localhost:8889/notebooks/Boto3_tuts.ipynb#d some machines to have your dirty deeds done dirt cheap."
+    "import boto3"
    ]
   },
   {
@@ -22,9 +23,67 @@
    "source": [
     "# SQS\n",
     "\n",
-    "Message queues for communicating between lambdas and anything else. \n",
+    "Message queues for communicating between stuff, incluiding lambdas and anything else. \n",
     "\n",
-    "Also: https://cloudonaut.io/integrate-sqs-and-lambda-serverless-architecture-for-asynchronous-workloads/"
+    "Step 0: Make a message queue e.g.: aws sqs create-queue --queue-name MyQueue --attributes file://create-queue.json \n",
+    "or see https://docs.aws.amazon.com/cli/latest/reference/sqs/create-queue.html\n",
+    "\n",
+    "\n",
+    "Endgame: https://cloudonaut.io/integrate-sqs-and-lambda-serverless-architecture-for-asynchronous-workloads/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#{\"QueueUrl\": \"https://eu-west-1.queue.amazonaws.com/901610709743/boto_tut_sqs\"}\n",
+    "sqs = boto3.client('sqs') #make the client\n",
+    "queue_url = 'https://eu-west-1.queue.amazonaws.com/901610709743/boto_tut_sqs' #use a url for the queue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Send a message to an SQS queue\n",
+    "response = sqs.send_message(\n",
+    "    QueueUrl=queue_url,\n",
+    "    DelaySeconds=10,\n",
+    "    MessageAttributes={'Title': {'DataType': 'String',\n",
+    "                                 'StringValue': 'Solanum tuberosum'\n",
+    "                                }\n",
+    "                      },\n",
+    "    MessageBody=('Thats the non-vulgar name of potatoes, you barbarian.')\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(response['MessageId'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# S3\n",
+    "Being able to store/get data in some way. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# EC2\n",
+    "And then you need some machines to have your dirty deeds done dirt cheap."
    ]
   },
   {
@@ -32,7 +91,7 @@
    "metadata": {},
    "source": [
     "# IAM\n",
-    "If we ever need to complicate our lives in this way."
+    "If we ever need to?"
    ]
   },
   {
