--- a/people/populations.ipynb
+++ b/people/populations.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -325,13 +326,15 @@
     "\n",
     "The Bipartite graph (Bigraph) representation lends itself pretty easily to model relations observable in snapshots of time in which a set of people ($A$) perform an action over a set of items ($B$). And let's call that action a decision to purchase. The set of those decisions is returned by $\\cal{F}$.\n",
     "\n",
-    "In that way we can take a dataset of timestamps of purchases, and use it to construct a Bigraph. "
+    "In that way we can take a dataset of timestamps of purchases, and use it to construct a Bigraph. Then we can see what can be extracted out of that. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -343,8 +346,13 @@
     }
    },
    "source": [
-    "## Configuring crude population clusters\n",
+    "## Building Datasets\n",
     "\n",
+    "To generate $A$, $B$ and $\\cal{F}$ we can use makePopulation from \"helpers.py\". This method allows building labelled rows representing purchases. We can use the labels as a ground truth for different algorithms. \n",
+    "\n",
+    "Note that it is entirely possible for an algorithm to discover an interesting property of the data which was not considered while generating it, yet having some ground truth to discover is the main task. \n",
+    "\n",
+    "*TODO*: explain how makepopulation works in more detail\n",
     " "
    ]
   },
@@ -352,6 +360,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -365,7 +374,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "population=makePopulation(100,[\"something\",\"age\",\"postcode\"],\n",
@@ -378,7 +389,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print (population.keys())\n",
@@ -398,7 +411,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "fittable=np.array([population[\"something\"],\n",
@@ -411,7 +426,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "clusterlabels=list(zip(alg.labels_,population[\"cluster_label\"]))\n",
@@ -421,7 +438,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#ninja visualizing hamming distance using html \n",
@@ -457,7 +476,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "linkage_methods=['ward', 'average', 'complete']\n",
@@ -468,7 +489,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import webcolors"
@@ -477,7 +500,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -498,7 +523,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
