editorial changes on text

--- a/people/populations.ipynb
+++ b/people/populations.ipynb
@@ -27,7 +27,7 @@
     }
    },
    "source": [
-    "# Finding relations between clusters of people and clusters of stuff they purchase\n",
+    "# Studying relations between clusters of people and clusters of stuff they purchase\n",
     "\n",
     "The old saying goes something on the lines of \"you are what you eat\". On modern, digitally connected societies the sentiment shifts towards \"you are what you consume\". That may include food, of course. \n",
     "\n",
